--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
                      <div class="footer-links">
                         <ul>
                            <li>
-                              <a href="">Home</a>
+                              <a href="index.html">Home</a>
                            </li>
                            <li>
-                              <a href="#">Contact us</a>
+                              <a href="contact-us.html">Contact us</a>
                            </li>
                            <li>
-                              <a href="#">Privacy Policy</a>
+                              <a href="privacy-policy.html">Privacy Policy</a>
                            </li>
                            <li>
-                              <a href="#">Terms and Conditions</a>
+                              <a href="term-and-condition.html">Terms and Conditions</a>
                            </li>
                         </ul>
                      </div>
@@ -271,13 +271,12 @@
       <!-- footer section end here -->
       <!-- cookies section start here -->
       <div id="cookies-popup">
-         <p>Deze website maakt gebruik van cookies om ervoor te
-            zorgen dat u de beste ervaring op onze website krijgt. Door op ‘Accepteren’ te klikken, gaat
-            u akkoord met het gebruik van alle cookies. U kunt de Cookie-instellingen bezoeken om
-            gecontroleerde toestemming te geven.
+         <p>Cookies are used by us to enhance your online experience. These are little text files stored on your
+            computer. If you continue to use our website, you consent to the use of cookies. Changes to your
+            cookie preferences can be made in the browser's settings. To learn more, check our privacy policy by
+            clicking here.
          </p>
          <button id="accept-cookies">Accepteren</button>
-         <button>Cookie-instellingen</button>
       </div>
       <!-- cookies section end here -->
       <script src="assets/js/jquery-3.7.1.min.js"></script>
