--- a/contact-us.html
+++ b/contact-us.html
@@ -119,16 +119,16 @@
                      <div class="footer-links">
                         <ul>
                            <li>
-                              <a href="">Home</a>
+                              <a href="index.html">Home</a>
                            </li>
                            <li>
-                              <a href="#">Contact us</a>
+                              <a href="contact-us.html">Contact us</a>
                            </li>
                            <li>
-                              <a href="#">Privacy Policy</a>
+                              <a href="privacy-policy.html">Privacy Policy</a>
                            </li>
                            <li>
-                              <a href="#">Terms and Conditions</a>
+                              <a href="term-and-condition.html">Terms and Conditions</a>
                            </li>
                         </ul>
                      </div>
