--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             .mobile-view{
                display: block;
             }
+            .mobile-view .top-wrap{
+               background-color: transparent;
+            }
+            .mobile-view .top-card{
+               background-color:#ead5cd75 ;
+            }
+
             .mobile-img img {
     width: 100%;
     max-width: 100%;
