--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ text-align: left;
             <div class="col-lg-6 col-md-6 col-sm-12 ">
                <div class="topcontent-picture">
                   <a href="luxury.html">
-                   <img src="assets/images/Luxury-Hotels001.jpg" alt="hometop1" class="img-fluid">
+                   <img src="assets/images/Luxury-Hotels001" alt="hometop1" class="img-fluid">
                   </a>
                </div>
            </div>
@@ -146,7 +146,7 @@ text-align: left;
             <div class="col-lg-6 col-md-6 col-sm-12 ">
                <div class="topcontent-picture">
                   <a href="unique.html">
-                   <img src="assets/images/hometop2.webp" alt="hometop1" class="img-fluid">
+                   <img src="assets/images/Unique-Hotel-banner.jpg" alt="hometop1" class="img-fluid">
                    </a>
                </div>
            </div>
@@ -190,7 +190,7 @@ text-align: left;
             <div class="col-lg-6 col-md-6 col-sm-12 ">
                <div class="topcontent-picture">
                   <a href="casino.html">
-                   <img src="assets/images/hometop3.webp" alt="hometop1" class="img-fluid">
+                   <img src="assets/images/casino-banner.jpg" alt="hometop1" class="img-fluid">
                   </a>
                </div>
            </div>
