--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 }
 .mobile-view .top-card-txt p {
     text-align: left;
+    padding: 5px;
 }
 .mobile-view .top-card-txt .read-more-btn{
 text-align: left;
