--- a/term-and-condition.html
+++ b/term-and-condition.html
@@ -58,8 +58,9 @@
       <div class="sub-banner term-banner">
             <div class="sub-banner-txt ">
                 <h2>
-                    Term and Conditions
+                    Term and Conditions<br>
                 </h2>
+       
             </div>
       </div>
      
@@ -69,15 +70,13 @@
         <div class="container">
             <div class="privacy-wrap">
                 <h5>
-                    Welcome to betzones.net!
+                    Welcome to sportsbookpromotions.org!
                 </h5>
                 <p>
-                    These terms and conditions outline the rules and regulations for the use of betzones.net's Website,
-located at betzones.net.
+                    These terms and conditions outline the rules and regulations for the use of sportsbookpromotions.org's Website, located at sportsbookpromotions.org.
                 </p>
                 <p>
-                    By accessing this website we assume you accept these terms and conditions. Do not continue to use
-betzones.net if you do not agree to take all of the terms and conditions stated on this page.
+                    By accessing this website we assume you accept these terms and conditions. Do not continue to use sportsbookpromotions.org if you do not agree to take all of the terms and conditions stated on this page.
                 </p>
             </div>
             <div class="privacy-wrap">
@@ -99,8 +98,7 @@ capitalization and/or he/she or they, are taken as interchangeable and therefore
                     Cookies
                 </h5>
                 <p>
-                    We employ the use of cookies. By accessing betzones.net, you agreed to use cookies in agreement
-with the betzones.net's Privacy Policy.
+                    We employ the use of cookies. By accessing sportsbookpromotions.org, you agreed to use cookies in agreement with the sportsbookpromotions.org's Privacy Policy.
                 </p>
                 <p>
                     Most interactive websites use cookies to let us retrieve the user's details for each visit. Cookies are
@@ -113,9 +111,7 @@ website. Some of our affiliate/advertising partners may also use cookies.
                     License
                 </h5>
                 <p>
-                    Unless otherwise stated, betzones.net and/or its licensors own the intellectual property rights for all
-material on betzones.net. All intellectual property rights are reserved. You may access this from
-betzones.net for your own personal use subjected to restrictions set in these terms and conditions.
+                    Unless otherwise stated, sportsbookpromotions.org and/or its licensors own the intellectual property rights for all material on sportsbookpromotions.org. All intellectual property rights are reserved. You may access this from sportsbookpromotions.org for your own personal use subjected to restrictions set in these terms and conditions.
                 </p>
 
             </div>
@@ -125,16 +121,16 @@ betzones.net for your own personal use subjected to restrictions set in these te
                 </p>
                 <ul>
                     <li>
-                        Republish material from betzones.net
+                        Republish material from sportsbookpromotions.org
                     </li>
                     <li>
-                        Sell, rent or sub-license material from betzones.net
+                        Sell, rent or sub-license material from sportsbookpromotions.org
                     </li>
                     <li>
-                        Reproduce, duplicate or copy material from betzones.net
+                        Reproduce, duplicate or copy material from sportsbookpromotions.org
                     </li>
                     <li>
-                        Redistribute content from betzones.net
+                        Redistribute content from sportsbookpromotions.org
                     </li>
                 </ul>
             </div>
@@ -146,17 +142,10 @@ of the Free Terms and Conditions Generator.
             </div>
             <div class="privacy-wrap">
                 <p>
-                    Parts of this website offer an opportunity for users to post and exchange opinions and information in
-certain areas of the website. betzones.net does not filter, edit, publish or review Comments prior to
-their presence on the website. Comments do not reflect the views and opinions of betzones.net,its
-agents and/or affiliates. Comments reflect the views and opinions of the person who post their views
-and opinions. To the extent permitted by applicable laws, betzones.net shall not be liable for the
-Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of
-and/or posting of and/or appearance of the Comments on this website.
+                    Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. sportsbookpromotions.org does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of sportsbookpromotions.org,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, sportsbookpromotions.org shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.
                 </p>
                 <p>
-                    betzones.net reserves the right to monitor all Comments and to remove any Comments which can be
-considered inappropriate, offensive or causes breach of these Terms and Conditions.
+                    sportsbookpromotions.org reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.
                 </p>
             </div>
             <div class="privacy-wrap">
@@ -182,8 +171,7 @@ commercial activities or unlawful activity.
                     </li>
                 </ul>
                 <p>
-                    You hereby grant betzones.net a non-exclusive license to use, reproduce, edit and authorize others to
-use, reproduce and edit any of your Comments in any and all forms, formats or media.
+                    You hereby grant sportsbookpromotions.org a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.
                 </p>
             </div>
             <div class="privacy-wrap">
@@ -274,8 +262,7 @@ us look unfavorably to ourselves or to our accredited businesses;
 any negative records with us;
                     </li>
                     <li>
-                        the benefit to us from the visibility of the hyperlink compensates the
-absence of betzones.net; and
+                        the benefit to us from the visibility of the hyperlink compensates the absence of sportsbookpromotions.org;
                     </li>
                     <li>
                         the link is in the context of general resource information.
@@ -301,11 +288,7 @@ services;
             </div>
             <div class="privacy-wrap">
                 <p>
-                    If you are one of the organizations listed in paragraph 2 above and are interested in linking to our
-website, you must inform us by sending an e-mail to betzones.net. Please include your name, your
-organization name, contact information as well as the URL of your site, a list of any URLs from which
-you intend to link to our Website, and a list of the URLs on our site to which you would like to link.
-Wait 2-3 weeks for a response.
+                    If you are one of the organizations listed in paragraph 2 above and are interested in linking to our website, you must inform us by sending an e-mail to sportsbookpromotions.org. Please include your name, your organization name, contact information as well as the URL of your site, a list of any URLs from which you intend to link to our Website, and a list of the URLs on our site to which you would like to link. Wait 2-3 weeks for a response
                 </p>
             </div>
             <div class="privacy-wrap">
@@ -325,8 +308,7 @@ context and format of content on the linking party's site.
                     </li>
                 </ul>
                 <p>
-                    No use of betzones.net's logo or other artwork will be allowed for linking absent a trademark license
-agreement.
+                    No use of sportsbookpromotions.org's logo or other artwork will be allowed for linking absent a trademark license agreement.
                 </p>
             </div>
             <div class="privacy-wrap">
