--- a/contact-us.html
+++ b/contact-us.html
@@ -67,28 +67,23 @@
     <div class="contaciner">
         <div class="contact-txt">
             <p>
-                <strong>Reach out to us:</strong> Considering a journey to New Zealand ? Our goal is to ensure that your trip goes well and that you
-                have an amazing time. Here is the contact information:
+                <strong>Reach out to us:</strong> Considering a journey to a Casino Hotel in Europe ? Our goal is to ensure that your trip goes well and that you have an amazing time in Europe. Here is the contact information:
             </p>
             <h5>
-                Contact Information
+               Contact Information:
             </h5>
             <p>
-                <strong>Email:</strong>  Reach out to our dedicated team at <a href="mailto:info@betzones.net">info@betzones.net</a>
+                <strong>Email:</strong>  Reach out to our dedicated team at <a href="info@sportsbookpromotions.com">info@sportsbookpromotions.com</a>
             </p>
             <p>
                 <strong>Social media:</strong>  Follow us on Twitter, Facebook, and Instagram to get the most recent offers, travel
                 advice, and highlights from Europe.
             </p>
             <p>
-                <strong>Visit Us:</strong>  You are welcome to stop by our office to have a conversation in person. Our welcoming staff
-                is always available to talk about your plans for hotels with facilities like casinos or spas in New
-                Zealand.
+                <strong>Visit Us:</strong>  You are welcome to stop by our office to have a conversation in person. Our welcoming staff is always available to talk about your plans for a Casino Hotel in Europe and offer tailored advice.
             </p>
             <p>
-                <strong>Customer Service:</strong>  We want your trip to New Zealand to be easy and fun, which is why we have a
-                committed staff of customer service representatives. We are here to assist you with any questions you
-                may have along the road, whether they are booking-related or not.
+                <strong>Customer Service:</strong>  We want your trip to a Casino Hotel to Europe to be easy and fun, which is why we have a committed staff of customer service representatives. We are here to assist you with any questions you may have along the road, whether they are booking-related or not.
             </p>
         </div>
     </div>
