--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ text-align: left;
             <nav>
                <div class="site-logo">
                   <a href="index.html">
-                  <img src="assets/images/header-logo.png" alt="logo">
+                  <img src="assets/images/new_logo.png" alt="logo">
                   </a>
                </div>
                <div class="nav-links">
@@ -70,17 +70,29 @@ text-align: left;
                         <a href="index.html" class="active">Home</a>
                      </li>
                      <li>
-                        <a href="luxury.html">Luxury</a>
+                        <a href="montecarlo.html">monte carlo</a>
                      </li>
                      <li>
-                        <a href="unique.html">Unique</a>
+                        <a href="london.html">London</a>
                      </li>
                      <li>
-                        <a href="casino.html">Casinos</a>
+                        <a href="netherlands.html">Netherlands</a>
                      </li>
                      <li>
-                       <a href="affordable.html">Affordable</a>
+                        <a href="greece.html">Greece</a>
                      </li>
+                     <li>
+                       <a href="switzerland.html">Switzerland</a>
+                     </li>
+                      <li>
+                        <a href="restaurants.html">Restaurants & Bars</a>
+                      </li>
+                      <li>
+                        <a href="nightlife.html">Nightlife</a>
+                      </li>
+                      <li>
+                        <a href="explore.html">Explore</a>
+                      </li>
                   </ul>
                </div>
                <div class="toggle">
@@ -322,7 +334,7 @@ Greece
                   <div class="footer-wrap">
                      <div class="footer-logo">
                         <a href="index.html">
-                           <img src="assets/images/header-logo.png" alt="">
+                           <img src="assets/images/new_logo.png" alt="">
                         </a>
                      </div>
                      <div class="social-links">
@@ -350,23 +362,35 @@ Greece
                      <div class="footer-links">
                         <ul>
                            <li>
-                              <a href="index.html">Home</a>
+                              <a href="index.html" class="active">Home</a>
                            </li>
                            <li>
-                              <a href="luxury.html">Luxury</a>
+                              <a href="montecarlo.html">monte carlo</a>
                            </li>
                            <li>
-                              <a href="unique.html">Unique</a>
+                              <a href="london.html">London</a>
                            </li>
                            <li>
-                              <a href="casino.html">Casinos</a>
+                              <a href="netherlands.html">Netherlands</a>
                            </li>
                            <li>
-                              <a href="affordable.html">Affordable</a>
+                              <a href="greece.html">Greece</a>
                            </li>
                            <li>
-                             <a href="contact-us.html">Contact us</a>
+                             <a href="switzerland.html">Switzerland</a>
                            </li>
+                            <li>
+                              <a href="restaurants.html">Restaurants & Bars</a>
+                            </li>
+                            <li>
+                              <a href="nightlife.html">Nightlife</a>
+                            </li>
+                            <li>
+                              <a href="explore.html">Explore</a>
+                            </li>
+                            <li>
+                              <a href="contact-us.html">Contact us</a>
+                            </li>
                         </ul>
                      </div>
                   </div>
@@ -375,7 +399,7 @@ Greece
                <div class="col-lg-12 col-md-12 col-sm-12">
                   <div class="copy-right">
                      <p>
-                        Copyright © 2024 betzones.com
+                        Copyright © 2024 sportsbookpromotions.org
                      </p>
                      <div class="footer-links">
                      <ul>
@@ -394,14 +418,11 @@ Greece
       </footer>
       <!-- footer section end here -->
       <!-- cookies section start here -->
-      <!-- <div id="cookies-popup">
-         <p>Cookies are used by us to enhance your online experience. These are little text files stored on your
-            computer. If you continue to use our website, you consent to the use of cookies. Changes to your
-            cookie preferences can be made in the browser's settings. To learn more, check our privacy policy by
-            clicking here.
+      <div id="cookies-popup">
+         <p>Cookies are used by us to enhance your online experience. These are little text files stored on your computer. If you continue to use our website, you consent to the use of cookies. Changes to your cookie preferences can be made in the browser's settings. To learn more, check our privacy policy by clicking here.
          </p>
-         <button id="accept-cookies">Accepteren</button>
-      </div> -->
+         <button id="accept-cookies">Accept</button>
+      </div>
       <!-- cookies section end here -->
       <script src="assets/js/jquery-3.7.1.min.js"></script>
       <script src="assets/js/bootstrap.bundle.min.js"></script>
