--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -21,7 +21,7 @@
             <nav>
                <div class="site-logo">
                   <a href="index.html">
-                  <img src="assets/images/header-logo.png" alt="logo">
+                  <img src="assets/images/new_logo.png" alt="logo">
                   </a>
                </div>
                <div class="nav-links">
@@ -30,20 +30,32 @@
                   </div>
                   <ul>
                      <li>
-                        <a href="index.html" >Home</a>
+                        <a href="index.html">Home</a>
                      </li>
                      <li>
-                        <a href="luxury.html" >Luxury</a>
+                        <a href="montecarlo.html" >monte carlo</a>
                      </li>
                      <li>
-                        <a href="unique.html" >Unique</a>
+                        <a href="london.html">London</a>
                      </li>
                      <li>
-                        <a href="casino.html" >Casinos</a>
+                        <a href="netherlands.html"  >Netherlands</a>
                      </li>
                      <li>
-                        <a href="affordable.html" >Affordable</a>
+                        <a href="greece.html">Greece</a>
                      </li>
+                     <li>
+                       <a href="switzerland.html">Switzerland</a>
+                     </li>
+                      <li>
+                        <a href="restaurants.html">Restaurants & Bars</a>
+                      </li>
+                      <li>
+                        <a href="nightlife.html">Nightlife</a>
+                      </li>
+                      <li>
+                        <a href="explore.html">Explore</a>
+                      </li>
                   </ul>
                </div>
                <div class="toggle">
@@ -194,7 +206,7 @@
                   <div class="footer-wrap">
                      <div class="footer-logo">
                         <a href="index.html">
-                           <img src="assets/images/header-logo.png" alt="">
+                           <img src="assets/images/new_logo.png" alt="">
                         </a>
                      </div>
                      <div class="social-links">
@@ -222,23 +234,35 @@
                      <div class="footer-links">
                         <ul>
                            <li>
-                              <a href="index.html">Home</a>
+                              <a href="index.html" class="active">Home</a>
                            </li>
                            <li>
-                              <a href="luxury.html">Luxury</a>
+                              <a href="montecarlo.html">monte carlo</a>
                            </li>
                            <li>
-                              <a href="unique.html">Unique</a>
+                              <a href="london.html">London</a>
                            </li>
                            <li>
-                              <a href="casino.html">Casinos</a>
+                              <a href="netherlands.html">Netherlands</a>
                            </li>
                            <li>
-                              <a href="affordable.html">Affordable</a>
+                              <a href="greece.html">Greece</a>
                            </li>
                            <li>
-                             <a href="contact-us.html">Contact us</a>
+                             <a href="switzerland.html">Switzerland</a>
                            </li>
+                            <li>
+                              <a href="restaurants.html">Restaurants & Bars</a>
+                            </li>
+                            <li>
+                              <a href="nightlife.html">Nightlife</a>
+                            </li>
+                            <li>
+                              <a href="explore.html">Explore</a>
+                            </li>
+                            <li>
+                              <a href="contact-us.html">Contact us</a>
+                            </li>
                         </ul>
                      </div>
                   </div>
@@ -247,7 +271,7 @@
                <div class="col-lg-12 col-md-12 col-sm-12">
                   <div class="copy-right">
                      <p>
-                        Copyright © 2024 betzones.com
+                        Copyright © 2024 sportsbookpromotions.org
                      </p>
                      <div class="footer-links">
                      <ul>
