--- a/term-and-condition.html
+++ b/term-and-condition.html
@@ -17,41 +17,53 @@
    <body>
       <!-- header section start here -->
       <header class="site-header">
-         <div class="container">
-            <nav>
-               <div class="site-logo">
-                  <a href="index.html">
-                  <img src="assets/images/header-logo.png" alt="logo">
-                  </a>
-               </div>
-               <div class="nav-links">
-                  <div class="close">
-                     <i class="fa-solid fa-xmark"></i>
-                  </div>
-                  <ul>
+        <div class="container">
+           <nav>
+              <div class="site-logo">
+                 <a href="index.html">
+                 <img src="assets/images/new_logo.png" alt="logo">
+                 </a>
+              </div>
+              <div class="nav-links">
+                 <div class="close">
+                    <i class="fa-solid fa-xmark"></i>
+                 </div>
+                 <ul>
+                    <li>
+                       <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                       <a href="montecarlo.html" >monte carlo</a>
+                    </li>
+                    <li>
+                       <a href="london.html">London</a>
+                    </li>
+                    <li>
+                       <a href="netherlands.html"  >Netherlands</a>
+                    </li>
+                    <li>
+                       <a href="greece.html">Greece</a>
+                    </li>
+                    <li>
+                      <a href="switzerland.html">Switzerland</a>
+                    </li>
                      <li>
-                        <a href="index.html" >Home</a>
+                       <a href="restaurants.html">Restaurants & Bars</a>
                      </li>
                      <li>
-                        <a href="luxury.html" >Luxury</a>
+                       <a href="nightlife.html">Nightlife</a>
                      </li>
                      <li>
-                        <a href="unique.html" >Unique</a>
+                       <a href="explore.html">Explore</a>
                      </li>
-                     <li>
-                        <a href="casino.html" >Casinos</a>
-                     </li>
-                     <li>
-                        <a href="affordable.html" >Affordable</a>
-                     </li>
-                  </ul>
-               </div>
-               <div class="toggle">
-                  <i class="fa-solid fa-bars"></i>
-               </div>
-            </nav>
-         </div>
-      </header>
+                 </ul>
+              </div>
+              <div class="toggle">
+                 <i class="fa-solid fa-bars"></i>
+              </div>
+           </nav>
+        </div>
+     </header>
       <!-- header section end here -->
       
 
@@ -411,7 +423,7 @@ we will not be liable for any loss or damage of any nature.
                  <div class="footer-wrap">
                     <div class="footer-logo">
                        <a href="index.html">
-                          <img src="assets/images/header-logo.png" alt="">
+                          <img src="assets/images/new_logo.png" alt="">
                        </a>
                     </div>
                     <div class="social-links">
@@ -439,21 +451,33 @@ we will not be liable for any loss or damage of any nature.
                     <div class="footer-links">
                        <ul>
                           <li>
-                             <a href="index.html">Home</a>
+                             <a href="index.html" class="active">Home</a>
                           </li>
                           <li>
-                             <a href="luxury.html">Luxury</a>
+                             <a href="montecarlo.html">monte carlo</a>
                           </li>
                           <li>
-                             <a href="unique.html">Unique</a>
+                             <a href="london.html">London</a>
                           </li>
                           <li>
-                             <a href="casino.html">Casinos</a>
+                             <a href="netherlands.html">Netherlands</a>
                           </li>
                           <li>
-                             <a href="affordable.html">Affordable</a>
+                             <a href="greece.html">Greece</a>
                           </li>
                           <li>
+                            <a href="switzerland.html">Switzerland</a>
+                          </li>
+                           <li>
+                             <a href="restaurants.html">Restaurants & Bars</a>
+                           </li>
+                           <li>
+                             <a href="nightlife.html">Nightlife</a>
+                           </li>
+                           <li>
+                             <a href="explore.html">Explore</a>
+                           </li>
+                           <li>
                             <a href="contact-us.html">Contact us</a>
                           </li>
                        </ul>
@@ -464,7 +488,7 @@ we will not be liable for any loss or damage of any nature.
               <div class="col-lg-12 col-md-12 col-sm-12">
                  <div class="copy-right">
                     <p>
-                       Copyright © 2024 betzones.com
+                       Copyright © 2024 sportsbookpromotions.org
                     </p>
                     <div class="footer-links">
                     <ul>
